# hypha

./: .gitignore  Cargo.toml  README.md
docs/: 2026-03-26-hypha-design.md  2026-03-27-streaming-design.md
docs/plans/: 2026-03-27-streaming.md
src/: capability.rs  crypto.rs  discovery.rs  exchange.rs  handshake.rs  lib.rs  main.rs  messages.rs  node.rs  store.rs  stream.rs  transport.rs
tests/: integration.rs  quic_basic.rs
